:sparkles: feat: 优化

--- a/.vitepress/theme/styles/vitepress.ext.scss
+++ b/.vitepress/theme/styles/vitepress.ext.scss
@@ -648,4 +648,51 @@ a.VPSkipLink::after {
   .VPNavBar.screen-open {
     background-color: rgba(255, 255, 255, 0);
   }
+
+
+  /* 首页导航 */
+  .VPNavBar {
+    background-color: rgba(0, 0, 0, 0.03) !important;
+  }
+
+  /* 文档页导航两侧 */
+  .VPNavBar:not(.home) {
+    background-color: rgba(0, 0, 0, 0.03) !important;
+  }
+
+  @media (min-width: 960px) {
+    /* 文档页导航两侧 */
+    .VPNavBar:not(.home) {
+    background-color: rgba(0, 0, 0, 0.03) !important;
+    }
+
+    /* 首页下滑后导航两侧 */
+    .VPNavBar:not(.has-sidebar):not(.home.top) {
+    background-color: rgba(0, 0, 0, 0.03) !important;
+    }
+  }
+
+  /* 分割线 */
+
+  @media (min-width: 960px) {
+    /* 文档页分割线 */
+    .VPNavBar:not(.home.top) .divider-line {
+    background-color: rgba(0, 0, 0, 0.03) !important;
+    }
+
+    /* 首页分割线 */
+    .VPNavBar:not(.has-sidebar):not(.home.top) .divider {
+    background-color: rgba(0, 0, 0, 0.03) !important;
+    }
+  }
+
+  /* 搜索框 VPNavBarSearchButton.vue */
+  .DocSearch-Button {
+    background-color: rgba(0, 0, 0, 0.03) !important;
+  }
+
+  /* 移动端大纲栏 */
+  .VPLocalNav {
+    background-color: rgba(0, 0, 0, 0.03) !important;
+  }
 }
