--- a/.vitepress/theme/styles/vitepress.ext2.scss
+++ b/.vitepress/theme/styles/vitepress.ext2.scss
@@ -4,6 +4,17 @@
  * -------------------------------------------------------------------------- */
 
  :root {
+  --vp-c-brand: #646cff;
+  --vp-c-brand-light: #747bff;
+  --vp-c-brand-lighter: #9499ff;
+  --vp-c-brand-lightest: #bcc0ff;
+  --vp-c-brand-dark: #535bf2;
+  --vp-c-brand-darker: #454ce1;
+  --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
+  --c-brand: #646cff;
+  --c-brand-light: #747bff;
+  --vp-nav-bg-color: rgba(240, 242, 245, 1);
+
   --vp-shadow-1: 0 1px 2px rgba(0, 0, 0, 0.04), 0 1px 2px rgba(0, 0, 0, 0.06);
   --vp-shadow-2: 0 4px 12px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.05);
   --vp-shadow-3: 0 12px 32px rgba(0, 0, 0, 0.1), 0 2px 6px rgba(0, 0, 0, 0.08);
