--- a/.vitepress/theme/styles/vitepress.ext.scss
+++ b/.vitepress/theme/styles/vitepress.ext.scss
@@ -1,9 +1,8 @@
-
 /**
  * Colors
  * -------------------------------------------------------------------------- */
 
- :root {
+:root {
   --vp-shadow-1: 0 1px 2px rgba(0, 0, 0, 0.04), 0 1px 2px rgba(0, 0, 0, 0.06);
   --vp-shadow-2: 0 4px 12px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.05);
   --vp-shadow-3: 0 12px 32px rgba(0, 0, 0, 0.1), 0 2px 6px rgba(0, 0, 0, 0.08);
@@ -68,25 +67,25 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight:  vars.$app-font-weight;
-  font-size-adjust:  vars.$app-font-size-adjust;
+  font-weight: vars.$app-font-weight;
+  font-size-adjust: vars.$app-font-size-adjust;
   font-display: swap;
   scroll-behavior: smooth;
 }
 
 #app {
-  font-family:  vars.$app-font-family;
+  font-family: vars.$app-font-family;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight:  vars.$app-font-weight;
-  font-size-adjust:  vars.$app-font-size-adjust;
+  font-weight: vars.$app-font-weight;
+  font-size-adjust: vars.$app-font-size-adjust;
   font-display: swap;
 
   :deep(*) {
     font-family: vars.$app-font-family;
-    font-weight:  vars.$app-font-weight;
-    font-size-adjust:  vars.$app-font-size-adjust;
+    font-weight: vars.$app-font-weight;
+    font-size-adjust: vars.$app-font-size-adjust;
   }
 }
 
@@ -216,7 +215,6 @@ a.VPSkipLink::after {
   font-style: italic;
 }
 
-
 /* 跑马灯输入框 */
 .search-input {
   border: 2px solid transparent;
@@ -263,7 +261,6 @@ a.VPSkipLink::after {
 .search-input:focus {
   box-shadow: 0 0 8px rgba(255, 77, 77, 0.3), 0 0 20px rgba(77, 210, 255, 0.4);
 }
-
 
 .char-circle {
   display: inline-block;
@@ -495,6 +492,7 @@ a.VPSkipLink::after {
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       transition: backdrop-filter 0.4s ease;
       will-change: backdrop-filter;
+      z-index: var(--vp-z-index-nav);
     }
 
     /* 首页分割线 */
@@ -503,6 +501,7 @@ a.VPSkipLink::after {
       backdrop-filter: blur(20px);
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       transition: backdrop-filter 0.4s ease;
+      z-index: var(--vp-z-index-nav);
       will-change: backdrop-filter;
     }
   }
@@ -638,7 +637,6 @@ a.VPSkipLink::after {
     background-color: rgba(255, 255, 255, 0);
   }
 
-
   /* 首页导航 */
   .VPNavBar {
     background-color: rgba(0, 0, 0, 0.03) !important;
@@ -652,12 +650,12 @@ a.VPSkipLink::after {
   @media (min-width: 960px) {
     /* 文档页导航两侧 */
     .VPNavBar:not(.home) {
-    background-color: rgba(0, 0, 0, 0.03) !important;
+      background-color: rgba(0, 0, 0, 0.03) !important;
     }
 
     /* 首页下滑后导航两侧 */
     .VPNavBar:not(.has-sidebar):not(.home.top) {
-    background-color: rgba(0, 0, 0, 0.03) !important;
+      background-color: rgba(0, 0, 0, 0.03) !important;
     }
   }
 
@@ -666,12 +664,14 @@ a.VPSkipLink::after {
   @media (min-width: 960px) {
     /* 文档页分割线 */
     .VPNavBar:not(.home.top) .divider-line {
-    background-color: rgba(0, 0, 0, 0.03) !important;
+      background-color: rgba(0, 0, 0, 0.03) !important;
+      z-index: var(--vp-z-index-nav);
     }
 
     /* 首页分割线 */
     .VPNavBar:not(.has-sidebar):not(.home.top) .divider {
-    background-color: rgba(0, 0, 0, 0.03) !important;
+      background-color: rgba(0, 0, 0, 0.03) !important;
+      z-index: var(--vp-z-index-nav);
     }
   }
 
