--- a/.vitepress/theme/styles/vitepress.ext.scss
+++ b/.vitepress/theme/styles/vitepress.ext.scss
@@ -111,7 +111,20 @@ body {
 }
 
 .medium-zoom-image {
+  transition: transform 0.5s ease;
+    /* 平滑的变换过渡效果 */
   z-index: 10;
+  border-radius: 5px;
+}
+
+.medium-zoom-image:hover{
+  transform: translateY(-5px);
+    /* 向上平移图片 */
+}
+
+.medium-zoom-image:not(:hover) {
+  transform: translateY(0);
+  /* 图片回到原始位置 */
 }
 
 .medium-zoom-overlay,
@@ -147,6 +160,7 @@ body {
 :-webkit-full-screen {
   background-color: var(--vp-c-bg);
 }
+
 :-moz-full-screen {
   background-color: var(--vp-c-bg);
 }
@@ -154,6 +168,7 @@ body {
 :-ms-fullscreen {
   background-color: var(--vp-c-bg);
 }
+
 :fullscreen {
   background-color: var(--vp-c-bg);
 }
@@ -169,6 +184,7 @@ body {
 a.VPSkipLink {
   content: "转至正文";
 }
+
 a.VPSkipLink::after {
   content: "转至正文";
 }
@@ -189,6 +205,7 @@ a.VPSkipLink::after {
   /* 平滑过渡 */
   transition: background 0.3s ease, box-shadow 0.3s ease;
 }
+
 /*
 
 /* Hover 状态 */
@@ -206,7 +223,8 @@ a.VPSkipLink::after {
   background: linear-gradient(white, white) padding-box,
     linear-gradient(45deg, #ff0076, #1eaeff, #28ffbf, #ff0076) border-box;
   box-shadow: 0 0 15px rgba(255, 0, 118, 0.7), 0 0 25px rgba(30, 174, 255, 0.7);
-  color: #000; /* 聚焦时文本颜色 */
+  color: #000;
+  /* 聚焦时文本颜色 */
 }
 
 /* Placeholder 样式 */
@@ -221,18 +239,15 @@ a.VPSkipLink::after {
   border-radius: 10px;
   outline: none;
   background: linear-gradient(white, white) padding-box,
-    linear-gradient(
-        270deg,
-        #ff4d4d,
-        #ffa64d,
-        #ffff4d,
-        #4dff88,
-        #4dd2ff,
-        #b84dff,
-        #ff4da6,
-        #ff4d4d
-      )
-      border-box;
+    linear-gradient(270deg,
+      #ff4d4d,
+      #ffa64d,
+      #ffff4d,
+      #4dff88,
+      #4dd2ff,
+      #b84dff,
+      #ff4da6,
+      #ff4d4d) border-box;
   background-size: 400% 100%;
   background-repeat: repeat;
   background-position: 0 0;
@@ -246,6 +261,7 @@ a.VPSkipLink::after {
   0% {
     background-position: 0% 0;
   }
+
   100% {
     background-position: 100% 0;
   }
@@ -282,17 +298,13 @@ a.VPSkipLink::after {
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    #bd34fe 30%,
-    #41d1ff
-  );
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg,
+      #bd34fe 30%,
+      #41d1ff);
 
-  --vp-home-hero-image-background-image: linear-gradient(
-    -45deg,
-    #bd34fe 50%,
-    #47caff 50%
-  );
+  --vp-home-hero-image-background-image: linear-gradient(-45deg,
+      #bd34fe 50%,
+      #47caff 50%);
   --vp-home-hero-image-filter: blur(40px);
 }
 
@@ -337,7 +349,7 @@ a.VPSkipLink::after {
     }
   }
 
-  .vp-doc > div > * {
+  .vp-doc>div>* {
     --stagger: 0;
     --delay: 150ms;
     --start: 0ms;
@@ -345,64 +357,83 @@ a.VPSkipLink::after {
     animation-delay: calc(var(--start) + var(--stagger) * var(--delay));
   }
 
-  .vp-doc > div > *:nth-child(1) {
+  .vp-doc>div>*:nth-child(1) {
     --stagger: 1;
   }
-  .vp-doc > div > *:nth-child(2) {
+
+  .vp-doc>div>*:nth-child(2) {
     --stagger: 2;
   }
-  .vp-doc > div > *:nth-child(3) {
+
+  .vp-doc>div>*:nth-child(3) {
     --stagger: 3;
   }
-  .vp-doc > div > *:nth-child(4) {
+
+  .vp-doc>div>*:nth-child(4) {
     --stagger: 4;
   }
-  .vp-doc > div > *:nth-child(5) {
+
+  .vp-doc>div>*:nth-child(5) {
     --stagger: 5;
   }
-  .vp-doc > div > *:nth-child(6) {
+
+  .vp-doc>div>*:nth-child(6) {
     --stagger: 6;
   }
-  .vp-doc > div > *:nth-child(7) {
+
+  .vp-doc>div>*:nth-child(7) {
     --stagger: 7;
   }
-  .vp-doc > div > *:nth-child(8) {
+
+  .vp-doc>div>*:nth-child(8) {
     --stagger: 8;
   }
-  .vp-doc > div > *:nth-child(9) {
+
+  .vp-doc>div>*:nth-child(9) {
     --stagger: 9;
   }
-  .vp-doc > div > *:nth-child(10) {
+
+  .vp-doc>div>*:nth-child(10) {
     --stagger: 10;
   }
-  .vp-doc > div > *:nth-child(11) {
+
+  .vp-doc>div>*:nth-child(11) {
     --stagger: 11;
   }
-  .vp-doc > div > *:nth-child(12) {
+
+  .vp-doc>div>*:nth-child(12) {
     --stagger: 12;
   }
-  .vp-doc > div > *:nth-child(13) {
+
+  .vp-doc>div>*:nth-child(13) {
     --stagger: 13;
   }
-  .vp-doc > div > *:nth-child(14) {
+
+  .vp-doc>div>*:nth-child(14) {
     --stagger: 14;
   }
-  .vp-doc > div > *:nth-child(15) {
+
+  .vp-doc>div>*:nth-child(15) {
     --stagger: 15;
   }
-  .vp-doc > div > *:nth-child(16) {
+
+  .vp-doc>div>*:nth-child(16) {
     --stagger: 16;
   }
-  .vp-doc > div > *:nth-child(17) {
+
+  .vp-doc>div>*:nth-child(17) {
     --stagger: 17;
   }
-  .vp-doc > div > *:nth-child(18) {
+
+  .vp-doc>div>*:nth-child(18) {
     --stagger: 18;
   }
-  .vp-doc > div > *:nth-child(19) {
+
+  .vp-doc>div>*:nth-child(19) {
     --stagger: 19;
   }
-  .vp-doc > div > *:nth-child(20) {
+
+  .vp-doc>div>*:nth-child(20) {
     --stagger: 20;
   }
 
@@ -410,12 +441,15 @@ a.VPSkipLink::after {
     color: var(--vp-c-brand-light);
     background: initial;
   }
+
   .vp-doc strong:before {
     content: "「";
   }
+
   .vp-doc strong:after {
     content: "」";
   }
+
   .text-bold,
   b,
   strong {
@@ -424,6 +458,7 @@ a.VPSkipLink::after {
 }
 
 :root {
+
   /* 首页导航 */
   .VPNavBar {
     backdrop-filter: saturate(0.3) contrast(3.5) blur(20px) saturate(1.2);
@@ -443,6 +478,7 @@ a.VPSkipLink::after {
   }
 
   @media (min-width: 960px) {
+
     /* 文档页导航两侧 */
     .VPNavBar:not(.home) {
       background-color: saturate(0.3) contrast(3.5) rgba(255, 255, 255, 0.3) !important;
@@ -485,6 +521,7 @@ a.VPSkipLink::after {
   /* 分割线 */
 
   @media (min-width: 960px) {
+
     /* 文档页分割线 */
     .VPNavBar:not(.home.top) .divider-line {
       background-color: rgba(255, 255, 255, 0.3) !important;
@@ -574,26 +611,23 @@ a.VPSkipLink::after {
   margin: 8px 0;
 }
 
-.VPMenuGroup > .title {
+.VPMenuGroup>.title {
   font-size: 0.7em;
 }
 
 .vp-doc a {
-  background: linear-gradient(var(--vp-c-brand-soft), var(--vp-c-brand-soft))
-    no-repeat center bottom / 100% 2px;
+  background: linear-gradient(var(--vp-c-brand-soft), var(--vp-c-brand-soft)) no-repeat center bottom / 100% 2px;
   text-decoration: none;
   transition: 0.2s;
 }
 
 .vp-doc a:hover {
   border-radius: 0.2em;
-  background: linear-gradient(var(--vp-c-brand-soft), var(--vp-c-brand-soft))
-    no-repeat center bottom / 100% 100%;
+  background: linear-gradient(var(--vp-c-brand-soft), var(--vp-c-brand-soft)) no-repeat center bottom / 100% 100%;
 }
 
 .vp-doc strong {
-  background: linear-gradient(var(--vp-c-brand-soft), var(--vp-c-brand-soft))
-    no-repeat center bottom / 100% 40%;
+  background: linear-gradient(var(--vp-c-brand-soft), var(--vp-c-brand-soft)) no-repeat center bottom / 100% 40%;
 }
 
 .vp-doc s {
@@ -632,6 +666,7 @@ a.VPSkipLink::after {
 }
 
 .dark {
+
   .VPNavBar,
   .VPNavBar.screen-open {
     background-color: rgba(255, 255, 255, 0);
@@ -648,6 +683,7 @@ a.VPSkipLink::after {
   }
 
   @media (min-width: 960px) {
+
     /* 文档页导航两侧 */
     .VPNavBar:not(.home) {
       background-color: rgba(0, 0, 0, 0.03) !important;
@@ -662,6 +698,7 @@ a.VPSkipLink::after {
   /* 分割线 */
 
   @media (min-width: 960px) {
+
     /* 文档页分割线 */
     .VPNavBar:not(.home.top) .divider-line {
       background-color: rgba(0, 0, 0, 0.03) !important;
@@ -724,41 +761,56 @@ a.VPSkipLink::after {
 
 .full-table {
   /*table { ... }是CSS规则，用于样式化 HTML 表格,花括号里的内容是声明块，包含的是"属性：值"键值对*/
-  border-collapse: collapse; /* 合并边框，避免双线问题  */
-  table-layout: fixed; /* 列宽由首行或表格宽度决定 */
+  border-collapse: collapse;
+  /* 合并边框，避免双线问题  */
+  table-layout: fixed;
+  /* 列宽由首行或表格宽度决定 */
   /* 响应式布局：表格宽度占满父容器，使表格自适应不同屏幕宽度*/
   width: max-content;
   min-width: 100%;
+
   // border: 1px solid var(--vp-c-brand);
   th,
   td {
     /*th, td { ... }是CSS规则，用于样式化 HTML 表格*/
-    border: 1px solid var(--vp-c-brand); /* 表头th和单元格td之间添加浅灰色实线边框，宽度1像素 */
-    overflow: hidden; /* 内容溢出时隐藏 */
+    border: 1px solid var(--vp-c-brand);
+    /* 表头th和单元格td之间添加浅灰色实线边框，宽度1像素 */
+    overflow: hidden;
+    /* 内容溢出时隐藏 */
     text-wrap: balance;
   }
+
   th {
     color: var(--vp-c-white);
-    background-color: var(--vp-c-brand); /* 表头背景色浅灰色 */
+    background-color: var(--vp-c-brand);
+    /* 表头背景色浅灰色 */
   }
+
   td {
-    white-space: nowrap; /* 禁止换行 */
-    overflow: hidden; /* 隐藏溢出内容 */
-    text-overflow: ellipsis; /* 显示省略号 */
+    white-space: nowrap;
+    /* 禁止换行 */
+    overflow: hidden;
+    /* 隐藏溢出内容 */
+    text-overflow: ellipsis;
+    /* 显示省略号 */
     vertical-align: middle;
     text-align: center;
     text-wrap: balance;
   }
+
   /* 悬停效果 */
   tr:hover {
-    background-color: var(--vp-c-brand-light); /* 悬停时变色 */
+    background-color: var(--vp-c-brand-light);
+    /* 悬停时变色 */
   }
 }
+
 h1,
 h2,
 h3 {
   text-wrap: balance;
 }
+
 /* VitePress Markdown 表格美化样式 */
 /* 响应式 + 悬停高亮 + 自动暗黑模式适配 */
 
@@ -854,6 +906,7 @@ h3 {
 
 /* 响应式调整 */
 @media (max-width: 768px) {
+
   .vp-table-container {
     border-radius: 6px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
@@ -867,6 +920,12 @@ h3 {
   // .vp-table td {
   //   padding: 10px 12px;
   // }
+}
+
+@media (max-width: 1024px) {
+  .VPHomeHero .image {
+    display: none !important;
+  }
 }
 
 .VPFeature .details {
