--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -33,6 +33,7 @@ body {
   padding-left: env(safe-area-inset-left);
   padding-right: constant(safe-area-inset-right);
   padding-right: env(safe-area-inset-right);
+  font-synthesis: initial;
 }
 
 /* 覆盖弹性滚动背景 */
