--- a/.vitepress/theme/styles/vitepress.vars.css
+++ b/.vitepress/theme/styles/vitepress.vars.css
@@ -262,7 +262,7 @@
 
 :root {
   --vp-font-family-base:
-    'Inter', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+    'Inter', ui-sans-serif, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   --vp-font-family-mono:
     ui-monospace, 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono',
@@ -272,7 +272,7 @@
 
 :root:where(:lang(zh)) {
   --vp-font-family-base:
-    'Punctuation SC', 'Inter', ui-sans-serif, system-ui, sans-serif,
+    'Punctuation SC', 'Inter', ui-sans-serif, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
