:sparkles: feat: 优化

--- a/.vitepress/theme/styles/vitepress.ext.scss
+++ b/.vitepress/theme/styles/vitepress.ext.scss
@@ -936,3 +936,8 @@ h3 {
   background: var(--vp-c-brand);
   color: var(--vp-c-text);
 }
+
+
+.vp-code-block-title-bar {
+  margin: auto !important;
+}
