:lipstick: style: 优化

--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -18,6 +18,8 @@
 html {
   background-color: var(--vp-c-bg);
   height: 100%;
+  scrollbar-gutter: stable both-edges;
+  text-wrap: balance;
 }
 
 body {
