:sparkles: feat: 更新站点Logo

--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -18,7 +18,8 @@
 html {
   background-color: var(--vp-c-bg);
   height: 100%;
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;scrollbar-width: thin;
+  // scrollbar-gutter: stable both-edges;
   text-wrap: balance;
 }
 
